Modified disclaimers to use only one version for all countries of residence. Added line break to additionalNotes. Modified custom.css to include a class with left and right margins. Added row class to endpoints to avoid images from overlapping other divs. Modified rows in endpoints to use row-margin class for orientation. Removed conditional disclaimer logic.

--- a/css/custom.css
+++ b/css/custom.css
@@ -91,6 +91,7 @@ a {
 	width: 100px;
 }
 
-.well {
-	margin-top: 20px;
+.row-margin {
+	margin-left: 15px;
+	margin-right: 15px;
 }
